force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/cgcloud__Batch_Run_Status_Detail__c.object-meta.xml
<CustomObject>
    <description>Collects further batch monitoring details.</description>
    <label>Batch Run Status Detail</label>
    <nameField>
        <displayFormat>BRSD-{00000000}</displayFormat>
        <label>Batch Run Status Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Run Status Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>