force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__Batch_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_Run_Status__c</fullName>
    <description>Reference to main Batch Monitoring record.</description>
    <label>Batch Run Status</label>
    <referenceTo>cgcloud__Batch_Run_Status__c</referenceTo>
    <relationshipLabel>Batch Run Status Details</relationshipLabel>
    <relationshipName>Batch_Run_Status_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>