force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Detail_Type__c</fullName>
    <description>Type of the detail record.</description>
    <label>Detail Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>KPI</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>