force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Entry_Date__c</fullName>
    <description>Time stamp of the API call which created this entry.</description>
    <label>Entry Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>