force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__Error_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Error_Value__c</fullName>
    <description>Error summary containing information about the issue a batch process encountered.</description>
    <label>Error Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>