force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__KPI_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Value__c</fullName>
    <description>Summary which contains relevant KPIs of the batch process execution.</description>
    <label>KPI Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>