force-app/main/default/objects/cgcloud__Batch_Run_Status_Detail__c/fields/cgcloud__Progress_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Progress_Value__c</fullName>
    <description>Value indicating the progress of the batch process.</description>
    <label>Progress Value</label>
    <type>TextArea</type>
</CustomField>